--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/pizza.html"
+    <div>
+        <h2><a href="/recipes/pizza.html">Pizza</a></h2>
+        <h2></h2>
+        <h2></h2>
+        <h2></h2>
+    </div>
 </body>
 </html>
