--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <div>
-        <h2><a href="./recipes/pizza.html">Pizza</a></h2>
+        <h2><a href="recipes/pizza.html">Pizza</a></h2>
         <h2></h2>
         <h2></h2>
         <h2></h2>
