--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <div>
         <h2><a href="./recipes/pizza.html">Pizza</a></h2>
-        <h2><a href="./recipes/pizza.html">Kebab</a></h2>
+        <h2><a href="./recipes/kebab.html">Kebab</a></h2>
         <h2></h2>
         <h2></h2>
     </div>
